--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                     <spam>Ingredientes<br>Naturais</spam>
                 </div>
                 <div class="circle">
-                    <i class="fas fa-car 4x"></i>
+                    <i class="fas fa-truck 4x"></i>
                     <spam>Sem sair<br>de casa!</spam>
                 </div>
             </div>
