--- a/index.html
+++ b/index.html
@@ -206,6 +206,10 @@
         }
         
         @media screen and (max-width: 600px) {
+            .circle {
+                width: 120px;
+                height: 120px;
+            }
             h2 {
                 margin-top: 20px;
             }
