--- a/index.html
+++ b/index.html
@@ -476,9 +476,9 @@
                             <p style="color: rgb(0,103,34); text-align: center; font: 22px; margin-bottom: 30px; ">Unidade Caixa Jacarandá</p>
                             <h2 class="w3-wide " style="color: rgb(0,103,34); text-align: center; ">R$145</h2>
                             <p style="text-align: center; margin-top: 0 "><span class="w3-opacity " style="color: rgb(0,103,34); text-align: center; ">por unidade</span></p>
-                            <a target="_blank " href="https://projetos-de-robotica-x.lojaintegrada.com.br/teste- "><button
+                            <a target="_blank " href="https://www.jacarandara.com.br/caixa-de-produtos-jacaranda"><button
                                 style="background-color: rgb(0, 79, 103); color: white; ">Mercado Pago</button></a>
-                            <a target="_blank " href="https://picpay.me/barbara.jacaranda "><button
+                            <a target="_blank " href="https://picpay.me/barbara.jacaranda"><button
                                     style="background-color: rgb(0,103,34); color: white; ">PicPay</button></a>
                         </li>
                     </ul>
